// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Input Text Component should render a hint when a hint is passed in 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
    <span
      class="form-hint"
    >
      Testing hint
    </span>
  </label>
  <input
    class="form-control"
    id="ip"
    name="ip"
    type="text"
    value="someText"
  />
</div>
`;

exports[`The Input Text Component should render an error when an error is passed in 1`] = `
<div
  class="form-group form-group-error"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
    <span
      class="error-message"
    >
      Testing error
    </span>
  </label>
  <input
    class="form-control form-control-error"
    id="ip"
    name="ip"
    type="text"
    value="someText"
  />
</div>
`;

exports[`The Input Text Component should render as a checked input correctly 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
  </label>
  <input
    class="form-control"
    id="ip"
    name="ip"
    type="text"
    value="someText"
  />
</div>
`;

exports[`The Input Text Component should render correctly when a value is passed in 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
  </label>
  <input
    class="form-control"
    id="ip"
    name="ip"
    type="text"
    value="someText"
  />
</div>
`;
